Add opt-in llamaj.cpp OCR backend
Agent-Logs-Url: https://github.com/ningpp/flux/sessions/6f5dd593-01ad-46f6-9b85-a95e075bd701

Co-authored-by: ningpp <2511498+ningpp@users.noreply.github.com>